fable/test/semantic_error/real_declared_twice.f
      program prog
      real val
      real val
      end
